src/App.css
/* ... */
.button_to_top,
.button_to_left {
    background-color: rgba(255, 255, 255, 0.01);
    font-size: 1rem;
    padding: 0;
}

.button_to_top a,
.button_to_left a {
    display: inline-block;
}



/*
+ BackToSearch
+ ScrollToTop
*/

.scroll_buttons {
    display: flex;
    justify-content: center;
}

.BackToSearch img,
.ScrollToTop img {
    margin: 5px;
    width: 52px;
}

.BackToSearch p,
.ScrollToTop p {
    font-size: 1.2rem;
    font-weight: bold;
    letter-spacing: 0.05rem;
    margin: 5px;
}



/*
+ Main
+ Title
*/

.card {
    align-items: center;
    background-color: var(--white);
    border-radius: 4px;
    box-shadow: 1px 1px 6px 2px rgb(165, 164, 164);
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
    margin: 80px auto;
}

.WeatherCurrent.card,
.AirQuality.card,
.Location.card,
.Astronomy.card {
    padding: 10px;
}

.spaced {
    align-items: baseline;
    border-bottom: 1px solid var(--dim_grey);
    display: flex;
    justify-content: space-between;
    padding: 5px 0;
}

.WeatherCurrent .title,
.Forecast .title,
.AirQuality .title,
.Location .title,
.Astronomy .title {
    border-bottom: 1px solid var(--dark_blue);
    font-family: 'Dosis', sans-serif;
    font-family: 'Red Hat Display', sans-serif;
    font-size: 2.4rem;
    letter-spacing: 0.2rem;
    text-transform: uppercase;
    word-spacing: 0.2rem;
}

.WeatherCurrent .title,
.Forecast .title {
    margin: 5vh 0 1vh;
}

.AirQuality .title,
.Location .title,
.Astronomy .title {
    margin: 5vh;
}

.sub_title_main {
    font-size: 2rem;
    font-weight: 300;
    letter-spacing: 0.2rem;
}


/*
+ Weather Current
*/

.Weather_current_main {
    width: 100%;
}

.WeatherCurrent .top_content {
    /*margin: 30px;*/
}

.WeatherCurrent .top_content_header {
    margin: 10px 10px 0 10px;
    text-align: center;
}

.WeatherCurrent .top_content_header img {
    margin: 20px 0 0;
    width: 100px;
}

.WeatherCurrent .top_content_main .current_weather_text {
    font-size: 1.6rem;
    font-weight: 400;
}

.WeatherCurrent .top_content_main .feels_like img {
    margin: 10px 20px 10px 10px;
    transform: rotate(20deg);
    width: 32px;
}

.WeatherCurrent .top_content_main .feels_like h3 {
    font-size: 1.3rem;
    font-weight: 300;
    height: 100%;
}

.WeatherCurrent .bottom_content,
.ForecastDailyInfo .bottom_content {
    display: flex;
    justify-content: space-between;
    width: 100%;
}

.WeatherCurrent .bottom_content {
    margin: 60px 0 100px;
}

.WeatherCurrent .bottom_left,
.WeatherCurrent .bottom_right {
    margin: 20px 60px;
}

.WeatherCurrent span,
.ForecastDailyInfo span,
.AirQuality span,
.Location span,
.Astronomy span {
    font-size: 18px;
}







/*
+ Slider
*/

.slider {
    border-radius: 4px;
    padding: 15px;
}

.awssld {
    height: 95vh;
    height: 1000px;
    background: url(img/beach.jpg) no-repeat top;
    --slider-transition-duration: 1000ms !important;
}

.awssld__wrapper {
    border-radius: 4px;
}

.awssld__container {
    height: 100% !important;
}

.awssld__content {
    background-color: var(--white) !important;
    display: block !important;
}

.awssld__prev,
.awssld__next {
    top: 0 !important;
}

.awssld__controls__arrow-left,
.awssld__controls__arrow-right {
    bottom: 10px;
    opacity: 1 !important;
}

.awssld__controls__arrow-left {
    left: 50px !important;
}

.awssld__controls__arrow-right {
    right: 50px !important;
}


.awssld__controls button:hover {
    opacity: var(--control-button-opacity) !important;
}

.awssld__controls__arrow-left::before,
.awssld__controls__arrow-left::after,
.awssld__controls__arrow-right::before,
.awssld__controls__arrow-right::after {
    background-color: var(--blue) !important;
}

.awssld--fallAnimation {
    --fall-animation-angle: 20deg !important;
    --fall-scaling-in-from: 1.0 !important;
}



/*  Bullets  */
.awssld__bullets {
    bottom: -90px !important;
    right: 2px;
}

.awssld__bullets button {
    background-color: var(--dim_grey) !important;
    margin: 0 35px !important;
    padding: 20px !important;
    transition: background-color 200ms linear 200ms, transform 300ms ease !important;
}

.awssld__bullets button.awssld__bullets--active {
    background-color: var(--blue) !important;
}

.awssld__bullets button:hover:not(.awssld__bullets--active) {
    opacity: 0.9;
}



/*
+ Slider Buttons
*/

.dot_slide_wrapper {
    display: inline-block;
    margin: auto;
}

.dot_slide {
    background-color: var(--light_grey);
    border: none;
    color: var(--dark_grey);
    cursor: pointer;
    display: inline;
    padding: 15px;
    width: 180px;
}

.dot_slide:first-child {
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
}

.dot_slide:last-child {
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
}

.carousel__dot {
    transition: background-color 800ms linear 0s, color 400ms linear 0s;
}

.dot_slide_wrapper button:not(.carousel__dot--selected) {
    opacity: 0.85;
}

.dot_slide_wrapper button:hover:not(.carousel__dot--selected) {
    opacity: 1;
}

.carousel__dot--selected {
    background-color: var(--blue);
    color: var(--white);
}



/*
+ Weather Forecast
*/

.ForecastHeader .title {
    display: inline-block;
}

.ForecastHeader .sub_title_main {
    align-items: center;
    display: flex;
    justify-content: center;
}

.ForecastHeader img.right {
    margin: 0 15px;
    width: 42px;
}
.ForecastHeader img.left_down {
    display: inline-block;
    bottom: 5px;
    left: 100px;
    position: relative;
    transform: rotate(150deg);
    width: 42px;
}

.ForecastHeader .date {
    bottom: 25px;
    display: inline-block;
    font-size: 1.3rem;
    font-weight: 300;
    letter-spacing: 0.1rem;
    position: relative;
}

.ForecastHeader .sub_title {
    font-family: 'Nunito', sans-serif;
    font-size: 1.6rem;
    font-weight: normal;
}
/* ... */

